# tmp-smoke

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
Python/: pipeline-closest.py  pipeline.py  run_fds.sh  train.py  train_image_to_image.py
Python/examples/benchmark/: convert_data_to_coco.py  model.py  requirements.txt  run_benchmark.py  train_model.py
Python/examples/fds-convertor/: README.md  expand_fds.py  fds_to_texture-v2.py  fds_to_texture.py
Python/examples/fds_convertor/: fds_to_texture.py
Python/examples/push-to-hub/: READMD.md
Python/examples/push_to_hub/: create_model.py
Python/examples/run_pipeline/: run_pipeline.py
Python/examples/train-a-model/: README.md  test-clip.py  train-clip.py  train-clip.sh  train.py  train_controlnet.py  train_unet.py
Python/examples/train_a_model/: README.md  train_clip.py  train_clip.sh  train_clip_tmp.sh  train_sd.py  train_unet.py  train_vq.py
Python/scripts/: expand_fds.py  fds2texture.py
Python/src/lychee_smore/: __init__.py  custom_tokenizer.py
Python/utils/: datasets_utils.py
examples/fds_convertor/: expand_fds.py
examples/push_to_hub/: create_model.py
examples/run_benchmark/: README.md  eval.py  requirements.txt  train.py
examples/run_benchmark/models/: __init__.py  (+2 more)
examples/run_benchmarks/: train.py
examples/run_pipeline/: run_pipeline.py
examples/train_a_model/: README.md  train_clip.py  train_sd.py  train_vq.py
examples/train_controlnet/: run_controlnet.sh  run_evaluation_controlnet.py  run_pipeline_controlnet.py  train_controlnet.py  train_diffusion.py
(+30 files in other folders)
